--- a/lab02/static/style.css
+++ b/lab02/static/style.css
@@ -25,8 +25,15 @@ nav ul {
 
 main {
     margin: 3vh;
+    border: black;
+    border-width: 1px;
+    border-style: solid;
+    width: 30%;
 }
 
+img {
+    width: 100%;
+}
 
 @media only screen and (max-width: 1000px) {
     /* Media queries go here */
