--- a/lab02/templates/restaurant.html
+++ b/lab02/templates/restaurant.html
@@ -11,11 +11,15 @@
     {% include 'includes/header.html' %}
 
     <main>
-        <p>Search location: {{city}}</p>
-        <p>Search term: {{search_term or 'None Specified'}}</p>
-        <p>Data: {{ restaurant }}</p>
-        <h2>Top Restaurant:</h2> 
-        <p>Name: {{ restaurant.get('name') }}</p>
+        <h2>{{ restaurant.get('name') }}</h2> 
+        <img src="{{ restaurant.get( 'image_url' ) }}"/>
+        <h3>{{ restaurant.get('display_address') }}</h3>
+        <p>Price: <b>{{restaurant.get('price')}}</b></p>
+        <hr>
+        <p>Rating: <b>{{restaurant.get('rating')}}</b></p>
+        <hr>
+        <p># Reviews: <b>{{restaurant.get('review_count')}}</b></p>
+
     </main>
 </body>
 </html>
